[gd_scene load_steps=6 format=2]

[ext_resource path="res://HeadsUpDisplay.gd" type="Script" id=1]
[ext_resource path="res://xolonium-regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="HeadsUpDisplay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -80.0
margin_right = 240.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Don't touch the aliens!"
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 240.0
margin_right = 77.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 3 )
text = "OK"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
